# utf8-stream

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: heuristics.rs  internal.rs  lib.rs  stream.rs  tools.el
tests/: test_contiguous_u8_operations.rs  test_deref_str.rs  test_extend.rs  test_from_string_and_string_slices.rs  test_get_and_index.rs  test_iterator_as_str.rs  test_utf8_stream.rs
