[package]
name = "utf8-stream"
version = "0.0.0"
edition = "2024"
description = "Lightweight crate that provides Utf8Stream that \"streams\" over utf8 chunks and derefs to string slices"
documentation = "https://docs.rs/utf8-stream"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/utf8-stream"
license = "MIT"
keywords = ["utf8", "unicode", "streamer"]
authors = ["Gabriel DeMoura <gabrielteratos@gmail.com>"]
categories = ["internationalization", "localization", "parsing"]
autotests = false

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options"]

[lib]
name = "utf8_stream"
path = "src/lib.rs"

[[test]]
name = "test_get_and_index"
path = "./tests/test_get_and_index.rs"

[[test]]
name = "test_contiguous_u8_operations"
path = "./tests/test_contiguous_u8_operations.rs"

[[test]]
name = "test_deref_str"
path = "./tests/test_deref_str.rs"

[[test]]
name = "test_extend"
path = "./tests/test_extend.rs"

[[test]]
name = "test_from_string_and_string_slices"
path = "./tests/test_from_string_and_string_slices.rs"

[[test]]
name = "test_iterator_as_str"
path = "./tests/test_iterator_as_str.rs"